# consilium

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
consilium/: _judge_runner.py  _progress.py  _round_runner.py  alerts.py  archive.py  archive_schema.sql  cost.py  daily_summary.py  default_council.py  judge_parser.py  limits.py  model_specs.py  models.py  orchestrator.py  permissions.py  preview.py  prompts.py  templates.py  tokens.py  transcript.py  usage.py
consilium_cli/: __init__.py  main.py  progress.py
consilium_client/: __init__.py  client.py  config.py  errors.py
consilium_mcp/: __init__.py  main.py  registry.py  server.py
deploy/: env.example  install.sh  limits.yaml.example
docs/: INSTALL.md  OPS.md
scripts/: _jobid.py  archive.py  budget.py  run_debate.py
templates_default/: acupuncture_debate.yaml  book_chapter_review.yaml  brand_check.yaml  devil_advocate.yaml  positioning.yaml  pricing_strategy.yaml  product_concept.yaml  quick_check.yaml  solo.yaml  unit_economics.yaml
tests/: test_alerts.py  test_archive_list.py  test_archive_load.py  test_archive_roi.py  test_archive_save.py  test_archive_schema.py  test_archive_search.py  test_archive_stats.py  test_cost.py  test_daily_summary.py  test_default_council.py  test_default_templates.py  test_is_file_permission_safe.py  test_judge_parser.py  test_judge_runner.py  test_limits.py  test_model_specs.py  test_models.py  test_orchestrator.py  test_orchestrator_progress.py  test_permissions.py  test_preview.py  test_prompts.py  test_round_runner.py  test_templates.py  test_tokens.py  (+3 more)
(+120 files in other folders)
